--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
-gdnative = "0.11.3"
+gdnative = { git = "https://github.com/godot-rust/godot-rust.git" }
+
+
